--- a/code/styles.css
+++ b/code/styles.css
@@ -123,6 +123,13 @@ p {
 	margin: 0;
 }
 
+/*
+This series of elements works to build the overal navbar which is used on each page of the website as a header.
+It includes images, links and other aesthetic components.
+It also includes the footer element which remains at the bottom of the user's webpage.
+- Daniel Frankish
+*/
+
 nav a { /* styling for each element of the navigation bar list, sets proper colouring and hyperlink styling - Daniel Frankish */
 	text-decoration: none;
 	background-color: #ffffff;
@@ -142,19 +149,6 @@ nav a { /* styling for each element of the navigation bar list, sets proper colo
 	text-align: center;
 }
 
-body { /* sets the proportions for the overall body of the webpage - Daniel Frankish */
-	height: 100%;
-	width: 100%;
-}
-
-#main { /* styles the main body of the document and sets its proportions - Daniel Frankish */
-	width: 50%;
-	padding: 10px;
-	background-color: #c0c0c0;
-	margin: auto;
-	height: 100vh;
-}
-
 #navbar-image { /*  configures the image for the navbar - Daniel Frankish */
 	width: 100px;
 	display: block;
@@ -170,6 +164,24 @@ a:hover { /* Needs replacing do not use - Daniel Frankish */
 	background-color: #111;
 }
 
+/*
+These elements define the fundemental heirarchy of the main content of the page.
+Descending from the body to the main articles of the webpage.
+- Daniel Frankish
+*/
+
+body { /* sets the proportions for the overall body of the webpage - Daniel Frankish */
+	height: 100%;
+	width: 100%;
+}
+
+#main { /* styles the main body of the document and sets its proportions - Daniel Frankish */
+	width: 50%;
+	padding: 10px;
+	background-color: #c0c0c0;
+	margin: auto;
+	height: 100vh;
+}
 
 article { /* Colours the main article's background - Daniel Frankish */
 	background-color: #D9D9D9;
