--- a/code/navstyle.css
+++ b/code/navstyle.css
@@ -63,5 +63,31 @@ a:hover { /* Needs replacing do not use - Daniel Frankish */
 }
 
 
+.dropdown { /*Spesifcations for the dropdown - Dominic white*/
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdownContent { /* formating of the content boxes of the dropdown - Dominic White*/
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdownContent a{  /* formating for the contents of the dropdown boxes - Dominic White*/
+    color: rgb(0, 0, 0);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  
+.dropdownContent a:hover {background-color: #f1f1f1} /*The colour when hovering over a button in the dropdown - Dominic White*/
+  
+.dropdown:hover .dropdownContent {/* Displays dropdown when the button is hovered over - Dominic White*/
+    display: block;
+}
 
 
