--- a/code/styles.css
+++ b/code/styles.css
@@ -150,6 +150,50 @@ a:hover { /* Needs replacing do not use - Daniel Frankish */
 .dropdown:hover .dropdownContent {/* Displays dropdown when the button is hovered over - Dominic White*/
     display: block;
 }
+
+/*
+filename: navresponsive.css
+author: Daniel Frankish
+created:
+last modified:
+description: this references the navbar on each page
+*/
+
+@media screen and (max-width: 1280px) and (min-width: 360px) {
+    nav ol li {
+        width: 30%;
+    }
+    
+    .buttonHeader {
+        width: 30%;
+    }
+
+    #navbar-image {
+        width: 20%;
+        height: 20%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    nav ol li {
+        width: 48%;
+    }
+
+    .buttonHeader {
+        width: 48%;
+        font-size: 0.5em
+    }
+
+    #navbar-image {
+        width: 20%;
+        height: 20%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}  
+
 /*
 These elements define the fundemental heirarchy of the main content of the page.
 Descending from the body to the main articles of the webpage.
