--- a/code/styles.css
+++ b/code/styles.css
@@ -281,6 +281,11 @@ width: 100%;
 height: 200px;
 }
 
+.wrap100 { /Gets a div thats 100% the width of the page - Dominic White/
+  width: 100%;
+  height: 100px;
+}
+
 .wrap50 { /*Gets a div thats 100% the width of the page - Dominic White */
 width: 100%;
 height: 50px;
