--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* 
+/*
 Formating for general button
 Used for general button usage
 Author: Dominic White
@@ -15,24 +15,24 @@ Author: Dominic White
   width: 150px;
   height: 50px;
 }
-  
+
 .buttonGeneral:hover{ /* What changes occur to the general use buttons when they are hovered over, - Dominic White*/
   background-color: #9F9F9F;
 }
-  
+
 /*
   Background
   Creates a background image on the page
   Author: Jack Spong
 */
-.background { /* makes your webpage have a background! - Jack Spong*/ 
+.background { /* makes your webpage have a background! - Jack Spong*/
   background-image: url("images/background_image.jpg");
-  background-size: cover; 
-  display: block; 
+  background-size: cover;
+  display: block;
   min-width: 1000px;
-  margin: 0; 
+  margin: 0;
 }
-  
+
 /*
   Imports font from google fonts
   Sets paragraph styling
@@ -49,7 +49,7 @@ p {
   word-spacing: -1x;
   line-height: 19px;
 }
-  
+
 * { /* Overall styling for the whole document, sets font and general settings to ensure proper function, such as the removal or outlines and margins - Daniel Frankish */
   font-family: 'calibri', sans-serif;
   color: black;
@@ -58,7 +58,7 @@ p {
   outline: 0;
   margin: 0;
 }
-  
+
 /*
   filename: navstyle.css
   author: Daniel Frankish
@@ -66,19 +66,19 @@ p {
   last modified:
   description: this references the navbar on each page
 */
-  
+
 nav a { /* styling for each element of the navigation bar list, sets proper colouring and hyperlink styling - Daniel Frankish */
   text-decoration: none;
   background-color: #ffffff;
 }
-  
+
 #navbar { /* Overall configuration for the navbar entity, sets color and sizing - Daniel Frankish */
   margin: 0;
   padding: 0;
   background-color: #ffffff;
   border: 0;
 }
-  
+
 /*
   #navlist { / styling for the list that is used to create the navbar, sets proper alignment and sizing - Daniel Frankish /
   display: inline-block;
@@ -87,7 +87,7 @@ nav a { /* styling for each element of the navigation bar list, sets proper colo
   text-align: center;
   }
 */
-  
+
 .buttonHeader{ /* Formating for the buttons used in the header - Dominic White*/
   display: inline-block;
   background-color: #ffffff;
@@ -97,38 +97,38 @@ nav a { /* styling for each element of the navigation bar list, sets proper colo
   text-decoration: none;
   margin: 4px 2px;
   width: 10%;
-  vertical-align: middle; 
+  vertical-align: middle;
 }
-  
+
 .buttonGeneral:hover{ /* What changes occur to the general use buttons when they are hovered over, - Dominic White*/
   background-color: #9F9F9F;
 }
-  
+
 #navbar-image { /*  configures the image for the navbar - Daniel Frankish */
   width: 100px;
   display: block;
 }
-  
-  
+
+
 a { /* Needs replacing do not use - Daniel Frankish */
   transition-duration: 500ms;
   display: block;
   padding: 8px;
   background-color: #b0b0b0;
 }
-  
-  
-  
+
+
+
 a:hover { /* Needs replacing do not use - Daniel Frankish */
   background-color: #9F9F9F;
 }
-  
-  
+
+
 .dropdown { /*Spesifcations for the dropdown - Dominic white*/
   position: relative;
   display: inline-block;
 }
-  
+
 .dropdownContent { /* formating of the content boxes of the dropdown - Dominic White*/
   display: none;
   position: absolute;
@@ -137,31 +137,31 @@ a:hover { /* Needs replacing do not use - Daniel Frankish */
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-  
+
 .dropdownContent a{  /* formating for the contents of the dropdown boxes - Dominic White*/
   color: rgb(0, 0, 0);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
-  
+
 .dropdownContent a:hover {background-color: #f1f1f1} /*The colour when hovering over a button in the dropdown - Dominic White*/
-  
+
 .dropdown:hover .dropdownContent {/* Displays dropdown when the button is hovered over - Dominic White*/
     display: block;
 }
-    
+
 /*
   These elements define the fundemental heirarchy of the main content of the page.
   Descending from the body to the main articles of the webpage.
   Author: Daniel Frankish
 */
-  
+
 body { /* sets the proportions for the overall body of the webpage - Daniel Frankish */
   height: 100%;
   width: 100%;
 }
-  
+
 .main { /* styles the main body of the document and sets its proportions - Daniel Frankish */
   width: 50%;
   padding: 10px;
@@ -182,7 +182,7 @@ body { /* sets the proportions for the overall body of the webpage - Daniel Fran
 
 aside {
   width: 25%;
-  background-color: white;  
+  background-color: white;
   border: 2px solid black;
   outline: 5px;
   padding: 5px;
@@ -199,7 +199,7 @@ h1 {
 article { /* Colours the main article's background - Daniel Frankish */
   background-color: #D9D9D9;
 }
-  
+
 .article_image {
   clear: both;
   padding-left: 7.5%;
@@ -213,7 +213,7 @@ footer { /* Creates a footer component for the website that covers the width of 
   width: 100%;
   height: 40px;
 }
-  
+
 /*
   Center
   This aligns eleents to the center
@@ -222,13 +222,13 @@ footer { /* Creates a footer component for the website that covers the width of 
 .centerText{ /* Centers text - Dominic White*/
   text-align: center;
 }
-  
+
 .centerElements { /* Centers elements in the header - Dominic White*/
   display: flex;
   justify-content: center;
   margin-top: 10px;
 }
-  
+
 .centerBox{
   margin-left: 12.5%;
   margin-right: 12.5%;
@@ -237,8 +237,8 @@ footer { /* Creates a footer component for the website that covers the width of 
   outline: black;
   outline-style: solid;
   outline-width: 2px;
-} 
-  
+}
+
 /*
   Colour background
   Gives the elements a background color and a box
@@ -251,7 +251,7 @@ footer { /* Creates a footer component for the website that covers the width of 
   padding-bottom: 10px;
   background-color: #A2A1A1;
 }
-  
+
 /*
   filename: navresponsive.css
   author: Daniel Frankish
@@ -259,16 +259,16 @@ footer { /* Creates a footer component for the website that covers the width of 
   last modified:
   description: this references the navbar on each page
 */
-  
+
 @media screen and (max-width: 1280px) and (min-width: 360px) {
   nav ol li {
     width: 30%;
   }
-    
+
   .buttonHeader {
     width: 30%;
   }
-  
+
   #navbar-image {
     width: 20%;
     height: 20%;
@@ -276,28 +276,28 @@ footer { /* Creates a footer component for the website that covers the width of 
     margin-right: auto;
   }
 }
-  
+
 @media screen and (max-width: 360px) {
   nav ol li {
     width: 48%;
   }
-  
+
   .buttonHeader {
     width: 48%;
    font-size: 0.5em
   }
-  
+
   #navbar-image {
     width: 20%;
     height: 20%;
     margin-left: auto;
     margin-right: auto;
   }
-}  
+}
 
 /*
   Limitations
-  Anything to do with limiting or changing how an element works 
+  Anything to do with limiting or changing how an element works
   Author: Dominic White
 */
 
@@ -312,27 +312,27 @@ textarea { /*Setups limitations for the text area - Dominic White*/
   width: 100%;
   height: 200px;
 }
-  
+
 .wrap50 { /*Gets a div thats 100% the width of the page - Dominic White */
   width: 100%;
   height: 50px;
 }
-  
+
 .floatLeft { /*Splits the div in two, putting elements on the left side - Dominic White*/
-  float:left; 
+  float:left;
   width: 50%;
 }
-  
+
 .floatRight { /*Splits the div in two, putting elements on the right side - Dominic White*/
   float: right;
   width: 50%;
 }
-  
+
 .padding10{ /* 10% padding on lefr and right - Dominic White*/
   padding-left: 10%;
   padding-right: 10%;
 }
-  
+
 .floatRight{ /*Floats elements right*/
   float: right;
 }
@@ -368,4 +368,27 @@ Author: Charlie O'neill
   padding: 0;
 }
 
+/* Section with unordered list styles */
+ul {
+  list-style: disc;
+  margin-left: 20px;
+}
 
+/* Address styles */
+address {
+  margin: 0;
+  padding: 0;
+  font-style: normal;
+}
+
+/* Bottom sections styles */
+.bottom-sections {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 20px;
+  margin-top: 50px;
+}
+
+.grayBorder{ /*Creates a 1px gray border*/
+  border: 1px solid rgb(103, 102, 102);
+}
