--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ body { /* sets the proportions for the overall body of the webpage - Daniel Fran
   padding-bottom: 50px;
   background-color: #c0c0c0;
   margin: auto;
-  height: 100%;
+  min-height: 100vh;
 }
 
 .mainAlt { /* styles the main body of the document and sets its proportions - Daniel Frankish */
@@ -313,6 +313,11 @@ textarea { /*Setups limitations for the text area - Dominic White*/
   height: 200px;
 }
 
+.wrap100 { /*Gets a div thats 100% the width of the page - Dominic White */
+  width: 100%;
+  height: 100px;
+}
+
 .wrap50 { /*Gets a div thats 100% the width of the page - Dominic White */
   width: 100%;
   height: 50px;
@@ -333,7 +338,7 @@ textarea { /*Setups limitations for the text area - Dominic White*/
   padding-right: 10%;
 }
 
-.floatRight{ /*Floats elements right*/
+.elementRight{ /*Floats elements right*/
   float: right;
 }
 
