--- a/Pages/styles/styles.css
+++ b/Pages/styles/styles.css
@@ -353,7 +353,8 @@ Sets styling for the lob listing divs
 Author: Charlie O'neill
 */
 .job_listing{
-  width: 40%;
+  margin-left: 5%;
+  width: 90%;
   background-color: white;
   text-align: justify;
 }
@@ -371,12 +372,6 @@ Author: Charlie O'neill
 .revertA{ /* Reverts the changes to the A class - Dominic White */
   display: contents;
   padding: 0;
-}
-
-/* Section with unordered list styles */
-ul {
-  list-style: disc;
-  margin-left: 20px;
 }
 
 /* Address styles */
@@ -397,36 +392,3 @@ address {
 .grayBorder{ /*Creates a 1px gray border*/
   border: 1px solid rgb(103, 102, 102);
 }
-
-.inputBox{ /* Replacment for the default input box in input fields - By Jack Spong */
-  margin: 5px;
-  margin-bottom: 20px; 
-  margin-top: 20px; 
-  padding: 10px;
-  padding-left: 5px;
-  padding-right: 5px; 
-  background-color: rgb(255, 255, 255);
-  outline: black;
-  outline-style: solid;
-  outline-width: 2px;
-  max-width: 48%;
-  width: 25%;
-
-}
-
-.input { /* Formats input field to remove there default box surrounding the input - By Jack Spong */
-  border-top-style: hidden;
-  border-right-style: hidden;
-  border-left-style: hidden;
-  border-bottom-style: hidden;
-  font-family: 'Open Sans', sans-serif;
-  color: black;
-  text-align: center;
-  font-size: 18px;
-  letter-spacing: 0px;
-  word-spacing: -1x;
-  line-height: 19px;
-
-}
-
-
